bitfields/tests/compile_error_cases/errors/arrays/array_signed_element_type.rs
use bitfields::bitfield;

#[bitfield([i8; 4])]
pub struct Bitfield {
    a: u32,
}

fn main() {}

